--- a/package.json
+++ b/package.json
@@ -59,6 +59,7 @@
     "dist"
   ],
   "dependencies": {
-    "@material-ui/core": "^4.9.3"
+    "@material-ui/core": "^4.9.4",
+    "@storybook/addon-docs": "^6.0.0-alpha.19"
   }
 }
